--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@ code {
   overflow: hidden;
 }
 
-@media screen and (max-width: 0px) {
+@media screen and (max-width: 768px) {
   #alert-screen{
       display: block;
       position: absolute;
